--- a/README
+++ b/README
@@ -4,4 +4,15 @@
 
 Clone the repo and run the following:
 
-`npm install`
+```
+npm install
+npm start
+```
+
+Your browser should open to http://localhost:3000/src/ where you can see your code.
+
+Happy coding!
+
+## Issues
+
+If you see any bugs, feel free to leave an issue.
